--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,3 +7,4 @@
 @import '../pages/About/about';
 @import '../pages/LocationPages/locationPages';
 // @import '../components/Footer/';
+@import '../components/Dropdown/dropdown';
