--- a/src/components/LocationCard/_locationCard.scss
+++ b/src/components/LocationCard/_locationCard.scss
@@ -1,3 +1,5 @@
+@import '../../styles/utils/mixins';
+
 .location-card {
     position: relative;
     width: 100%;
@@ -7,6 +9,7 @@
       width: 100%;
       padding-bottom: 100%;
       overflow: hidden;
+      
     }
 
     &__img-container::after {
