--- a/src/styles/base/_boilerplate.scss
+++ b/src/styles/base/_boilerplate.scss
@@ -4,6 +4,7 @@ html {
     scroll-behavior: smooth;
     box-sizing: border-box;
     font-size: 100%;
+    height: 100%;
 }
 
 *, *::before, *::after {
@@ -14,14 +15,19 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
+    display: flex;
+    flex-direction: column;
 }
 
 .container {
     display: flex;
     flex-direction: column;
     min-height: 100%;
-    max-width: 1240px;
+    max-width: 1280px;
+    padding-left: 20px;
+    padding-right: 20px;
     margin: auto;
+    flex: 1;
 }
 
 button {
