--- a/src/components/HeroBanner/_herobanner.scss
+++ b/src/components/HeroBanner/_herobanner.scss
@@ -1,3 +1,5 @@
+@import '../../styles/utils/mixins';
+
 .hero {
     display: flex;
     justify-content: center;
@@ -10,7 +12,10 @@
         margin: auto;
         z-index: 1;
         color: white;
-        font-size: 3rem;
+        font-size: clamp(24px, 5vw, 3rem);
+        @include mobile {
+            margin-left: 20px;
+        }
     }
 
     &__img {
@@ -18,6 +23,10 @@
         height: 223px;
         width: 100%;
         border-radius: 2.5rem;
+        @include mobile {
+            height: 111px;
+            border-radius: 10px;
+        }
     }
 
     &::after {
@@ -30,5 +39,10 @@
         background-color: rgba(0, 0, 0, 0.3);
         z-index: 0; 
         border-radius: 2.5rem;
+        @include mobile {
+            border-radius: 10px;
+            height: 111px;
+            
+        }
     }
 }
