--- a/src/pages/About/_about.scss
+++ b/src/pages/About/_about.scss
@@ -1,5 +1,32 @@
+@import '../../styles/utils/mixins';
 .about__dropdown {
     max-width: 1023px;
     width: 100%;
     margin: auto;
+}
+.about__hero {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin-top: 3.5rem;
+
+    &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.3);
+        z-index: 0; 
+        border-radius: 2.5rem;
+    }
+}
+
+.about__banner {
+    object-fit: cover;
+    height: 223px;
+    width: 100%;
+    border-radius: 2.5rem;
 }
