--- a/src/pages/NotFound/_notfound.scss
+++ b/src/pages/NotFound/_notfound.scss
@@ -1,4 +1,5 @@
 @import '../../styles/base/variables';
+@import '../../styles/utils/mixins';
 
 .error__container {
     display: flex;
@@ -13,10 +14,19 @@
         text-align: center;
         margin-top: 186px;
         margin-bottom: 66px;
+        @include mobile {
+            font-size: 96px;
+            margin-bottom: 0px;
+        }
     }
 
     &__subtitle {
         font-size: 36px;
+        @include mobile {
+            font-size: 18px;
+            text-align: center;
+            padding: 0px 0px;
+        }
     }
 
     &__link {
