--- a/src/components/ImageSlider/_imageSlider.scss
+++ b/src/components/ImageSlider/_imageSlider.scss
@@ -46,5 +46,14 @@
             height: 20px;
         }
     }
-
+    &--counter {
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        color: white;
+        font-size: 18px;
+        @include mobile {
+            display: none;
+        }
+    }
 }
